@startuml
hide empty description
[*] --> SpawningState
SpawningState --> RepairingState : Low HP\nstructures present
SpawningState --> BuildingState : CSites present
SpawningState --> IdleState : Nothing to do

BuildingState --> BuildingState : Working
BuildingState --> RefillingState : No resources\non hand
BuildingState --> MovingState : Out of range
BuildingState --> IdleState : CSite no longer exist
BuildingState --> IdleState : No CSites

RefillingState --> RepairingState : Resources full\nLow HP\nstructures present
RefillingState --> BuildingState : Resources full\nCSites present
RefillingState --> IdleState : Resources full\nNothing to do
RefillingState --> MovingState : Out of range
RefillingState --> RefillingState : No resources in storage\nwait for resources
RefillingState --> RefillingState : Could not withdraw\ntry again

RepairingState --> RepairingState : Working
RepairingState --> RepairingState : Could not repair\ntry again
RepairingState --> RefillingState : No resources\non hand
RepairingState --> IdleState : Nothing\nto repair
RepairingState --> IdleState : Structure to repair\ndoesn't exist
RepairingState --> IdleState : Structure repaired
RepairingState --> MovingState : Out of range

MovingState --> BuildingState : In range\nor no target set
MovingState --> RefillingState : In range\nor no target set
MovingState --> RepairingState : In range\nor no target set
MovingState --> MovingState : Tired or moving\n or no path or could not move

IdleState --> RepairingState : Low HP\nstructures present
IdleState --> BuildingState : CSites present
@enduml
